Updates Java version and refines simulation interactivity
Migrates project from Java 24 to Java 17 for compatibility and stability.
Reconfigures JavaFX library paths and adjusts VM arguments accordingly.
Enhances simulation interactivity with celestial body selection and improved UI.
Introduces event handling for 3D object clicks and highlights, enabling detailed information display.
Refines code structure and removes redundant debug statements.

Relates to system compatibility and user experience improvements.